2017-06-23  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/lint.c (nasl_lint_call): Add the file name and the line number
	to the context to be showed in case of error.

2017-06-22  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_ssh.c (nasl_ssh_login_interactive): Set variable to empty
	string if no authentication is requiered.

2017-06-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_func.h (nasl_func): Remove nb_named_args element.

	* nasl/nasl_func.c (insert_nasl_func, nasl_func_call, free_func): Adjust
	for nasl_func change.

	* nasl/nasl_init.c (init_nasl_library): Don't check for named args
	ordering.

	* nasl/nasl_misc_funcs.c (nasl_func_named_args, nasl_func_has_arg):
	Adjust for nasl_func change.

2017-06-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_lex_ctxt.h (lex_ctxt): Change functions element type to
	GHashTable.

	* nasl/nasl_func.h: Add function prototype.
	(nasl_func): Remove next_func element.

	* nasl/nasl_func.c (hash_str, free_func_chain): Remove unused functions.
	(get_func, insert_nasl_func): Adjust for functions element change.
	(get_func_ref_by_name): Adjust get_func() call.
	(free_func): Remove static modifier.

	* nasl/nasl_lex_ctxt.c (init_empty_lex_ctxt, free_lex_ctxt): Adjust for
	functions element change.
	(dump_ctxt): Remove dumping of functions.

2017-06-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_func.c (nasl_func_call): Don't check for FUNC_FLAG_COMPAT as
	it is never set.

	* nasl/nasl_func.h (FUNC_FLAG_COMPAT): Remove unused flag.

2017-06-22  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_signature.c (nasl_verify_signature): Adjust to handle
	case where the signature could not be parsed correctly. Initialize
	variables.

2017-06-22  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/nasl_builtin_nmap.c (dbg_display_cmdline, xmltag_open_hop): Put
	single 'dbg ()' calls in conditional branches into blocks for